# Smart-Thermostat-Simulator

./: .gitignore  CMakeLists.txt  README.md  Smart Thermostat Simulator.h
docs/: architecture.md  sample-log.txt
include/: Logger.h  TemperatureSensor.h  Thermostat.h
src/: Logger.cpp  TemperatureSensor.cpp  Thermostat.cpp  main.cpp
